tests/bad/bad_json.out
SyntaxError: Invalid JSON: <json>:1:0 Expected json literal but found ident
foo barbar foo
^ in <eval> at line number 1
